# MaiM-Connect

./: .gitignore  MaiM v1.0 发布文档.md  README.md  README.txt  upgrade_v04_to_v10.py
MaiM（联网工具）v62_lianwang/MaiBot/: Dockerfile  requirements.txt  test_search_engine.py
MaiM（联网工具）v62_lianwang/MaiBot-Napcat-Adapter/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
MaiM（联网工具）v62_lianwang/MaiBot-Napcat-Adapter/.github/workflows/: docker-image.yml
MaiM（联网工具）v62_lianwang/MaiBot-Napcat-Adapter/src/: __init__.py  config.py  logger.py  message_queue.py  mmc_com_layer.py  recv_handler.py  send_handler.py  utils.py
MaiM（联网工具）v62_lianwang/MaiBot-Napcat-Adapter/template/: template_config.toml
MaiM（联网工具）v62_lianwang/MaiBot/docs/: web_search.md
MaiM（联网工具）v62_lianwang/MaiBot/scripts/: test_web_search_tool.py
MaiM（联网工具）v62_lianwang/MaiBot/src/: main.py
MaiM（联网工具）v62_lianwang/MaiBot/src/common/: server.py  utils.py
MaiM（联网工具）v62_lianwang/MaiBot/src/do_tool/: store_knowledge.py  tool_use.py
MaiM（联网工具）v62_lianwang/MaiBot/src/do_tool/tool_can_use/: __init__.py  (+8 more)
MaiM（联网工具）v62_lianwang/MaiBot/src/heart_flow/: thinking_flow.py
MaiM（联网工具）v62_lianwang/MaiBot/src/plugins/: web_search.py
MaiM（联网工具）v62_lianwang/MaiBot/tests/: test_calendar_tool.py  test_knowledge_validation_and_graph.py  test_store_knowledge.py
MaiM（联网工具）v62_lianwang/maim_message/: .gitignore  LICENSE  README.md  api.py  pyproject.toml  readme_for_noob.md  setup.py
MaiM（联网工具）v62_lianwang/maim_message/src/maim_message/: __init__.py  api.py  message_base.py  router.py
(+16 files in other folders)
